# tech-challenge-churn-fiap-2026

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMMITS.md  MODEL_CARD.md  MONITORING.md
notebooks/: 01_eda_baselines.ipynb  02_mlp_training.ipynb
src/api/: main.py  schemas.py
src/data/: load_data.py
src/features/: pipeline.py
src/models/: baseline.py  mlp.py  train.py
src/utils/: logging.py  reproducibility.py
tests/: conftest.py  test_api.py  test_schema.py  test_smoke.py
